# optimizers

./: .gitignore  Cargo.toml  README.md  analysis.py  ansr.py  benchmark_results.csv  verify_paper.py
.cargo/: config.toml
experiments/: raw_progress.md  tune_progress.md
latex_tables/: easy_1024d.tex  easy_128d.tex  easy_256d.tex  easy_512d.tex  easy_64d.tex  hard_discrete_16d.tex  hard_discrete_32d.tex  hard_discrete_64d.tex  medium_periodic_16d.tex  medium_periodic_32d.tex  medium_periodic_64d.tex  medium_terrain_128d.tex  medium_terrain_256d.tex  medium_terrain_64d.tex
paper/: main.tex  plot_functions.py
src/: benchmark_params.rs  default_algorithms_params.rs  early_stop_callback.rs  functions.rs  lib.rs  optimizer.rs  optimizers.rs  plot.rs  runner.rs  utils.rs
tune_results/: easy_1024d_ans.csv  easy_1024d_ans_sort.csv  easy_1024d_ansr.csv  easy_1024d_ansr_dpnm.csv  easy_1024d_de.csv  easy_1024d_shade.csv  easy_1024d_zero_gradient.csv  easy_128d_ans.csv  easy_128d_ans_sort.csv  easy_128d_ansr.csv  easy_128d_ansr_dpnm.csv  easy_128d_de.csv  easy_128d_shade.csv  easy_128d_zero_gradient.csv  easy_256d_ans.csv  easy_256d_ans_sort.csv  easy_256d_ansr.csv  easy_256d_ansr_dpnm.csv  easy_256d_de.csv  easy_256d_shade.csv  easy_256d_zero_gradient.csv  easy_512d_ans.csv  easy_512d_ans_sort.csv  easy_512d_ansr.csv  easy_512d_ansr_dpnm.csv  easy_512d_de.csv  easy_512d_shade.csv  easy_512d_zero_gradient.csv  easy_64d_ans.csv  easy_64d_ans_sort.csv  easy_64d_ansr.csv  easy_64d_ansr_dpnm.csv  easy_64d_de.csv  easy_64d_shade.csv  easy_64d_zero_gradient.csv  (+49 more)
(+13 files in other folders)
