[package]
name = "optimizers"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic_float = "1.1.0"
image = "0.25.9"
indicatif = "0.18.4"
once_cell = "1.21.3"
plotters = "0.3.7"
rand = "0.10.0"
rand_distr = "0.6.0"
rand_pcg = "0.10.1"
rayon = "1.11.0"
simd_vector = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
